[metadata]
name = checkvist
version = 0.0.1.dev4
author = Nuno André
author_email = mail@nunoand.re
url = https://github.com/nuno-andre/checkvist
download_url = https://pypi.python.org/packages/source/c/checkvist/checkvist-0.0.1.dev4.tar.gz
description = Checkvist REST API wrapper
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = checkvist, outliner, to-do, todo
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Scheduling
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed
project_urls = 
    # Documentation = 
    Source = https://github.com/nuno-andre/checkvist
    Bug Tracker = https://github.com/nuno-andre/checkvist/issues
    Changelog = https://github.com/nuno-andre/checkvist/master/CHANGELOG.md

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
package_dir =
    =src
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel >= 0.32
install_requires = 
    typer
    httpx
    # dataclasses==0.6; python_version < '3.7'
    typing-extensions >= 3.7.4; python_version < '3.8'

[options.packages.find]
where = src

[options.package_data]
checkvist =
    py.typed

[options.extras_require]
tests =
    pytest
    pytest-dependency
docs =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    checkvist = checkvist.app.cli:cli
    peroque = attr:bueno

[flake8]
ignore = E221, E241
exclude =
    .git,
    __pycache__,
    .pytest_cache,
max-complexity = 10
per-file-ignores =
    **/__init__.py: E402, F401,
    **/exceptions.py: E704, E302,
inline-quotes = '
multiline-quotes = '''
docstring-quotes = '''
